Feature : Added footer section & social links , Added more media query

--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ nav li{
     display: inline;
     margin: 0px 15px;
 }
+nav li a:hover{
+    color: #23b575;
+    transition: color 0.2s;
+}
+.sign-in:hover{
+    color: white;
+}
 .green-btn:hover{
     transform: scale(1.02);
     transition: transform 0.5s;
@@ -33,7 +40,6 @@ nav li{
     height: 350px;
     display: flex;
     justify-content: center;
-    border: 2px solid;
     background-color: #23b57649;
     padding-bottom: 20px;
     margin-bottom: 30px;
@@ -97,10 +103,10 @@ span{
     background-color: #23b5763f;
 }
 .card:hover{
-    box-shadow: grey 3px 10px 17px 2px;
+    box-shadow: rgba(128, 128, 128, 0.363) 0px 4px 8px 0px;
     background-color: white;
-    transition: box-shadow 1s;
-    transition: background-color 1s;
+    transition: box-shadow 0.3s;
+    transition: background-color 0.3s;
 }
 .card1 h2{
     margin-bottom: -8px;
@@ -135,15 +141,15 @@ span{
 .cardy{
     width: 24%;
     border: none;
-    box-shadow: grey 5px 5px 30px 0px;
+    box-shadow: rgba(128, 128, 128, 0.445) 0px 4px 8px 0px;
     margin: 20px 30px;
     border-radius: 5px;
     padding: 15px 20px 5px 20px;
 }
 .cardy:hover{
-    box-shadow: grey 0px 0px 00px 0px;
+    box-shadow: grey 0px 0px;
     border: 1px solid rgba(128, 128, 128, 0.301);
-    transition: box-shadow 1s;
+    transition: box-shadow 0.2s;
 }
 .cardy-body, .cardy-detail{
     width: 100%;
@@ -199,14 +205,21 @@ footer{
     justify-content: center;
     align-items: center;
 }
+footer div{
+    margin: 0px 20px;
+}
+footer a:hover{
+    color: #23b575;
+}
 .fourty-width{
-    width: 40%;
+    width: 35%;
 }
 .twnty-width{
-    width: 20%;
+    width: 15%;
 }
 footer a{
     text-decoration: none;
+    color: #23b576ab;
 }
 
 
@@ -258,5 +271,29 @@ footer a{
     .crse-dtl{
         display: block;
         margin: 10px 0px;
+    }
+    .sxth-sec{
+        display: flex;
+        height: 50px;
+    }.sxth-sec{
+        display: block;
+        text-align: center;
+        height: 200px;
+    }
+    .sxth-sec img{
+        width: 60%;
+    }
+                                            /* FOOTER */
+    footer{
+        display: inline-flex;
+        text-align: center;
+    }
+    .fourty-width{
+        width: 40%;
+        text-align: left;
+    }
+    
+    .twnty-width{
+        width: 30%;
     }
 }
